modified the first function

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p>Thanks For Playing</p>
     </footer>
 
-    <script src="jsssss/app.js"></script>
+    <script src="js/app.js"></script>
 
   </body>
 </html>
